[gd_scene load_steps=2 format=3 uid="uid://cew66ihntn1us"]

[ext_resource type="Script" uid="uid://b4gd6n2hk7jkw" path="res://scripts/game_over.gd" id="1_xeevv"]

[node name="gameOver" type="CanvasLayer"]
script = ExtResource("1_xeevv")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -361.5
offset_top = -232.0
offset_right = 361.5
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="youGotBlahBlah" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "you killed whatever enemies and whatever this is a placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="playAgain" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "play again
"

[connection signal="pressed" from="Panel/VBoxContainer/playAgain" to="." method="_on_play_again_pressed"]
